--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,8 @@ wp-config.php
 
 # All plugins
 #
+# Sass
+/wp-content/themes/civi-child/package.json
+/wp-content/themes/civi-child/package-lock.json
+/wp-content/themes/civi-child/sass/
+/wp-content/themes/civi-child/node_modules/
